# Rust_Practice

./: .gitignore  Cargo.toml  ReadMe.md
src/: gcd.rs  main.rs
